--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RecycleSmart</title>
+    <title>Releaf</title>
     <meta name="description" content="AI-powered recycling assistant that helps you recycle correctly and build better habits" />
-    <meta name="author" content="RecycleSmart" />
+    <meta name="author" content="Releaf" />
 
-    <meta property="og:title" content="RecycleSmart" />
+    <meta property="og:title" content="Releaf" />
     <meta property="og:description" content="AI-powered recycling assistant that helps you recycle correctly and build better habits" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/Logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/Logo.png" />
+    <link rel="icon" type="image/png" href="/Logo.png" />
   </head>
 
   <body>
